# mikoshi-project

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
scripts/: chat.py
src/chatbot/: graph.py  memory.py  service.py
src/chatbot/chains/: generation.py  reflection.py
src/chatbot/nodes/: generate.py  reflect.py
src/models/: reflection.py
src/utils/: __init__.py  file_utils.py  llm_utils.py  prompt_utils.py  s3_utils.py
